fixed a few bugs on Firefox

--- a/client/development/style.css
+++ b/client/development/style.css
@@ -4313,6 +4313,7 @@ th {
   position: absolute;
   width: 20px;
   height: 20px;
+  top: 0;
   z-index: 10;
   border-radius: 50%;
   background-color: white;
@@ -4550,8 +4551,7 @@ th {
 }
 .m_modal--preview .mediaContainer.type-text,
 .m_modal--preview .mediaContainer.type-marker {
-  padding-top: 0.675em;
-  padding-bottom: 0.675em;
+  padding: 1.35em;
   font-size: 1.1em;
 }
 .m_modal--preview input[type="text"] {
