--- a/client/less/_media.less
+++ b/client/less/_media.less
@@ -36,6 +36,7 @@
       position: absolute;
       width: @t-anchor;
       height: @t-anchor;
+      top: 0;
       z-index: 10;
       border-radius: 50%;
 
